--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Jewel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xyolGD3gu1294cUtx8b6AtAc+L2f3eOLB2+D9qNFXVI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=ring
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -28,14 +28,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.com
+MAILGUN_DOMAIN=sandboxea494c3e910542988245b1a442206383.mailgun.org
+MAILGUN_SECRET=8690f44e8fc26270e2ae03115fc1570c-413e373c-a5899b2d
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@sandboxea494c3e910542988245b1a442206383.mailgun.org    
+MAIL_PASSWORD=d2f514a68a630e4270eab1e228ed24b5-413e373c-e8d15465
+MAIL_ENCRYPTION=NULL
+MAIL_FROM_ADDRESS=jewelweblaravel@gmail.com
+MAIL_FROM_NAME=”${APP_NAME}”
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -46,7 +48,18 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_APP_NAME="${APP_NAME}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+WA_NUMBER="628889886374"
+WA_MESSAGE="Halo saya akan melakukan pre order"
